--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,5 +18,21 @@ services:
       timeout: 5s
       retries: 5
 
+  backend:
+    image: python:3.12-slim
+    container_name: greendrive-back
+    working_dir: /app
+    env_file:
+      - .env
+    environment:
+      - DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-telemetry_db}
+    volumes:
+      - ./:/app
+    ports:
+      - "8000:8000"
+    depends_on:
+      - postgres
+    command: bash -c "pip install --no-cache-dir -r requirements.txt && uvicorn main:app --host 0.0.0.0 --port 8000"
+
 volumes:
-  postgres_data: 
+  postgres_data:
