--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ psycopg2-binary==2.9.9
 pydantic==2.5.2
 python-dotenv==1.0.0
 uuid==1.30
-requests==2.31.0
-openai==1.12.0 
+requests==2.32.0
+openai==1.82.0
+asyncpg==0.30.0
